--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "chai": "^4.2.0",
     "chownr": "^1.1.1",
     "code-prettify": "^0.1.0",
+    "copy-webpack-plugin": "^5.0.3",
     "dotenv-webpack": "^1.7.0",
     "ejs": "^2.6.1",
     "ejs-compiled-loader": "^2.1.0",
@@ -84,8 +85,10 @@
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery.xmleditor": "^1.3.0",
+    "js-yaml": "^3.13.1",
     "json-cycle": "^1.3.0",
     "json-decycle": "^1.0.0",
+    "json-tree-viewer": "0.0.2",
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "mock-browser": "^0.92.14",
