--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -22,4 +22,4 @@ extra_jobs:
       - mdq-browser
 
 script:
-  - env PATH=/usr/local/bin:$PATH make
+  - env PATH=/usr/local/bin:$PATH make setup all
