--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "mdq-browser",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@sunet/mdq-browser",
+  "version": "1.0.1",
+  "description": "an MDQ browser, including APIs for pyff.io",
   "main": "index.js",
-  "private": true,
+  "homepage": "https://github.com/SUNET/mdq-browser",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUNET/mdq-browser"
+  },
+  "bugs": {
+    "url": "https://github.com/SUNET/mdq-browser/issues"
+  },
   "scripts": {
     "test": "snyk test && ./node_modules/.bin/nyc --reporter=lcov -- ./node_modules/mocha/bin/_mocha --require @babel/register",
     "lint": "node_modules/.bin/goodparts src",
@@ -96,7 +103,6 @@
     "node-fetch": "^2.3.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
-    "post-robot": "^10.0.14",
     "snyk": "^1.143.0"
   },
   "snyk": true
