--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "js-yaml": "^3.13.1",
     "json-cycle": "^1.3.0",
     "json-tree-viewer": "0.0.2",
+    "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "mock-browser": "^0.92.14",
