--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "0.0.9",
+    "favicons-webpack-plugin": "^1.0.2",
     "fetch-mock": "^7.3.0",
     "file-loader": "^2.0.0",
     "goodparts": "^1.2.1",
-    "handlebars": "^4.1.0",
+    "handlebars": "^4.5.3",
     "handlebars-loader": "^1.7.0",
     "hashes": "^0.1.4",
     "html-loader": "^0.5.5",
@@ -81,7 +81,7 @@
     "chai": "^4.2.0",
     "chownr": "^1.1.1",
     "code-prettify": "^0.1.0",
-    "copy-webpack-plugin": "^5.0.3",
+    "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^1.7.0",
     "ejs": "^2.6.1",
     "ejs-compiled-loader": "^2.1.0",
@@ -94,8 +94,7 @@
     "js-yaml": "^3.13.1",
     "json-cycle": "^1.3.0",
     "json-tree-viewer": "0.0.2",
-    "loadash": "^1.0.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
     "mocha": "^5.2.0",
     "mock-browser": "^0.92.14",
     "mustache-loader": "^1.4.3",
