cleanup & fix request header passing

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ events {
 }
 
 http {
+   resolver 127.0.0.11 ipv6=off;
    server {
       include "mime.types";
       listen 80;
@@ -25,6 +26,7 @@ http {
          set_by_lua $mdq_host 'return os.getenv("MDQ_HOST")';
          set_by_lua $mdq_port 'return os.getenv("MDQ_PORT")';
          proxy_pass http://$mdq_host:$mdq_port;
+         proxy_pass_request_headers on;
       } 
    }
 }
